re-working index.html

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- Copy and paste your HTML from the first UI project here -->
-<div id="main">
+<div class ="container">
     <header>
         <nav>
             <a href="services.html" class="Services">Services</a>
@@ -29,10 +29,7 @@
             <a href="about.html" class="About">About</a>
             <a href="#" class="Contact">Contact</a>
         </nav>
-        <a href="index.html" class="index">
             <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-        </a>
-</div>
 </header>
 
   <section class="top main">
